--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.14.0",
+    "@mantine/carousel": "^8.2.7",
     "@mantine/core": "^8.2.5",
     "@mantine/hooks": "^8.2.5",
     "@tabler/icons-react": "^3.34.1",
@@ -15,6 +16,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "embla-carousel-react": "^7.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
