--- a/package.json
+++ b/package.json
@@ -5,13 +5,23 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@mantine/carousel": "^8.2.7",
-    "@mantine/core": "^8.2.5",
-    "@mantine/hooks": "^8.2.5",
+    "@mantine/core": "^8.2.8",
+    "@mantine/hooks": "^8.2.8",
+    "@mantine/tiptap": "^8.2.8",
     "@tabler/icons-react": "^3.34.1",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.7.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tiptap/extension-highlight": "^3.3.1",
+    "@tiptap/extension-link": "^3.3.1",
+    "@tiptap/extension-subscript": "^3.3.1",
+    "@tiptap/extension-superscript": "^3.3.1",
+    "@tiptap/extension-text-align": "^3.3.1",
+    "@tiptap/extension-underline": "^3.3.1",
+    "@tiptap/pm": "^3.3.1",
+    "@tiptap/react": "^3.3.1",
+    "@tiptap/starter-kit": "^3.3.1",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.10",
