--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "dompurify": "^3.2.6",
     "embla-carousel-react": "^7.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
