--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.14.0",
     "@mantine/carousel": "^8.2.7",
     "@mantine/core": "^8.2.8",
+    "@mantine/dates": "^8.3.1",
     "@mantine/hooks": "^8.2.8",
     "@mantine/tiptap": "^8.2.8",
     "@tabler/icons-react": "^3.34.1",
@@ -26,6 +27,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "dayjs": "^1.11.18",
     "dompurify": "^3.2.6",
     "embla-carousel-react": "^7.1.0",
     "react": "^19.1.1",
